--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <section class="container principal">
 <div class="container__caixa">
-<h1 class="container__titulo"> Alimentos Organicos</h1>
+<h1 class="container__titulo"> Agricultura Familiar</h1>
 <img src="rr.jpeg" alt=""class="conteiner__imagem">
 
 <p class="container__aviso"> </p>
