--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-<title>Alura</title>
+<title>trigo</title>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 
@@ -12,7 +12,7 @@
 <section class="container principal">
 <div class="container__caixa">
 <h1 class="container__titulo">trigo</h1>
-<img src="rr.jpeg" alt=""class="conteiner__imagem">
+<img src="trigo-removebg-preview.png" alt=""class="conteiner__imagem">
 
 <p class="container__aviso"> </p>
 </div>
