--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 </div>
 </section>
 <section class="container secundario">
-<img src="trigo-removebg-preview.png" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
+<img src="armac-colheita-de-trigo-blog.jpg" alt="Um monitor e um celular com a alura plus aberta" class="secundario__imagem">
 <div class="container__descricao">
-<h2 class="descricao__titulo">O que é considerado um Alimento Organico </h2>
-<p class="descricao__texto">Pela legislação brasileira, considera-se produto orgânico, seja ele in natura ou processado, aquele que é obtido em um sistema orgânico de produção agropecuária ou oriundo de processo extrativista sustentável e não prejudicial ao eco0ssistema local.
+<h2 class="descricao__titulo">colheita do trigo </h2>
+<p class="descricao__texto">A colheita do trigo geralmente ocorre entre os meses de outubro e dezembro, variando de acordo com a região e a variedade cultivada. O momento exato depende do ciclo de desenvolvimento da planta e da maturidade dos grãos.
     
     O que é produto orgânico exemplos?
     Os chamados produtos orgânicos são aqueles produzidos sem a adição de adubos químicos e de agrotóxicos. O cultivo de vegetais sem o uso de nenhum aditivo químico começou com a alface e outros vegetais, e hoje a produção envolve legumes em geral, frutas, bebidas como café e vinho..</p>
