--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1 class="container__titulo">trigo</h1>
 <img src="trigo-removebg-preview.png" alt=""class="conteiner__imagem">
 
-<p class="container__aviso"> </p>
+<p class="container__aviso"> O trigo é a gramínea cultivada em todo o mundo. Mundialmente, é a segunda maior cultura de cereais, sendo a primeira o milho e a terceira o arroz. O grão de trigo é um alimento básico usado para fazer farinha e, com esta, o pão, na alimentação dos animais domésticos e como ingrediente na fabricação de cerveja.</p>
 </div>
 </section>
 <section class="container secundario">
