--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 <h2 class="descricao__titulo">colheita do trigo </h2>
 <p class="descricao__texto">A colheita do trigo geralmente ocorre entre os meses de outubro e dezembro, variando de acordo com a região e a variedade cultivada. O momento exato depende do ciclo de desenvolvimento da planta e da maturidade dos grãos.
     
-    O que é produto orgânico exemplos?
-    Os chamados produtos orgânicos são aqueles produzidos sem a adição de adubos químicos e de agrotóxicos. O cultivo de vegetais sem o uso de nenhum aditivo químico começou com a alface e outros vegetais, e hoje a produção envolve legumes em geral, frutas, bebidas como café e vinho..</p>
+    o que e feito como o trigosda</p>
 </div>
 </section>
 <section class="container secundario">
