--- a/index.html
+++ b/index.html
@@ -23,17 +23,14 @@
 <h2 class="descricao__titulo">colheita do trigo </h2>
 <p class="descricao__texto">A colheita do trigo geralmente ocorre entre os meses de outubro e dezembro, variando de acordo com a região e a variedade cultivada. O momento exato depende do ciclo de desenvolvimento da planta e da maturidade dos grãos.
     
-    o que e feito como o trigosda</p>
+  </p>
 </div>
 </section>
 <section class="container secundario">
 <div class="container__descricao">
 <p class="descricao__texto">
-    Como saber se o alimento é orgânico?
-Sabe identificar se um produto é mesmo orgânico? 
-Veja as ...
-“Para ser reconhecido como orgânico, um produto processado deve conter, no mínimo, 95% de ingredientes de origem na agricultura orgânica, identificados no rótulo.
-Acesse mais em ...
+    o que é feito com o trigo?
+    O grão de trigo é um alimento básico usado para fazer farinha e, com esta, o pão, na alimentação dos animais domésticos e como ingrediente na fabricação de cerveja. O trigo é também plantado estritamente como forragem para animais domésticos, como a palha.
 </p>
 <a href="https://www.gov.br/saude/pt-br/assuntos/saude-brasil/eu-quero-me-alimentar-melhor/noticias/2017/o-que-sao-alimentos-organicos"> link </a>
 </div>
