--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 </section>
 <section class="container secundario">
 <div class="container__descricao">
+    <h1>o que é feito com o trigo?</h1>
 <p class="descricao__texto">
-    o que é feito com o trigo?
+   
     O grão de trigo é um alimento básico usado para fazer farinha e, com esta, o pão, na alimentação dos animais domésticos e como ingrediente na fabricação de cerveja. O trigo é também plantado estritamente como forragem para animais domésticos, como a palha.
 </p>
 <a href="https://www.gov.br/saude/pt-br/assuntos/saude-brasil/eu-quero-me-alimentar-melhor/noticias/2017/o-que-sao-alimentos-organicos"> link </a>
