--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 </section>
 <section class="container secundario">
 <div class="container__descricao">
-    <h1>o que é feito com o trigo?</h1>
+    <h1>O que é feito com o trigo?</h1>
 <p class="descricao__texto">
    
     O grão de trigo é um alimento básico usado para fazer farinha e, com esta, o pão, na alimentação dos animais domésticos e como ingrediente na fabricação de cerveja. O trigo é também plantado estritamente como forragem para animais domésticos, como a palha.
 </p>
-<a href="https://www.gov.br/saude/pt-br/assuntos/saude-brasil/eu-quero-me-alimentar-melhor/noticias/2017/o-que-sao-alimentos-organicos"> link </a>
+<a href="https://pt.wikipedia.org/wiki/Trigo#:~:text=O%20gr%C3%A3o%20de%20trigo%20%C3%A9,animais%20dom%C3%A9sticos%2C%20como%20a%20palha."> link </a>
 </div>
 <img src="033.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
 </section>
