--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </p>
 <a href="https://pt.wikipedia.org/wiki/Trigo#:~:text=O%20gr%C3%A3o%20de%20trigo%20%C3%A9,animais%20dom%C3%A9sticos%2C%20como%20a%20palha."> link </a>
 </div>
-<img src="033.png" alt="Tela do alura+ e alura língua" class="secundario__imagem">
+<img src="images.jpg" alt="Tela do alura+ e alura língua" class="secundario__imagem">
 </section>
 <footer class="rodape">
 
