--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 </section>
 <footer class="rodape">
 
-    <p class="rodape__texto">® 2024, Feito por Nicole Saibert Carneiro da Silva.</p>
-<p class="rodape__texto">A ENERGIA ESTÁ NA MESA: NUTRIÇÃO É A CHAVE PARA O SUCESSO!</p>
+    <p class="rodape__texto">® 2024, Feito por Kauane Melis Schuelter .</p>
+<p class="rodape__texto">Se o grão de trigo que cai na terra não morre, ele continua só um grão de trigo; mas se morre, então produz muito fruto!</p>
 </footer>
 </body>
 </html>
